--- a/includes/backMatter.tex
+++ b/includes/backMatter.tex
@@ -1,1 +1,8 @@
+\chapter{Bibliography}\label{sec:bibliography}
+\bibliographystyle{APA}
 
+
+\chapter{Appendices}\label{sec:appendix}
+\appendix
+\renewcommand{\thesubsection}{\Alph{subsection}}
+\input{chapters/backMatter/appendices}
