--- a/latex-quickstart.tex
+++ b/latex-quickstart.tex
@@ -8,7 +8,6 @@
 % Packages
 % --------------------------------------------------------------------
 \usepackage[a4paper]{geometry}
-%\usepackage[margin=1in, left=1.5in]{geometry}
 \usepackage[hidelinks]{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -34,11 +33,8 @@
 \usepackage{float}
 \graphicspath{images/}
 
-
-
-
-
-
+% Bibliography packages
+\usepackage[numbers,sort&compress]{natbib}
 
 
 % --------------------------------------------------------------------
@@ -83,5 +79,7 @@
 	% --------------------------
 	% Back(end) matter
 	% --------------------------
+
+	\include{includes/backMatter}
 	
 \end{document}
